chore: fix light mode vars to meet 4.5:1 contrast

--- a/sites/website/src/css/custom.css
+++ b/sites/website/src/css/custom.css
@@ -314,14 +314,20 @@ article {
     --ifm-link-decoration: underline;
 }
 
-.navbar__link--active {
-    --ifm-link-color: #ff4ca3;
+html[data-theme="dark"] {
+    --ifm-link-color: #fb356d;
+    --ifm-color-primary: var(--ifm-link-color);
+    --ifm-breadcrumb-color-active: #fb4b7d;
     --ifm-link-hover-color: #fc4579;
+    --ifm-navbar-link-hover-color: #fc4579;
+    --ifm-menu-color-active: #fc4579;
 }
 
-.menu__link--active,
-.breadcrumbs__link[itemprop="name"] {
-    --ifm-link-color: #ff4088;
+html[data-theme="light"] {
+    --ifm-link-color: #db0054;
+    --ifm-color-primary: var(--ifm-link-color);
+    --ifm-menu-color-active: var(--ifm-link-color);
+    --ifm-breadcrumb-color-active: var(--ifm-link-color);
 }
 
 a code {
